--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,15 @@
 header, body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Avenir Next';
+    font-size: 18px;
 }
 
 h1 {
     font-weight: bold;
-    font-size: 50px;
+    font-size: 20px;
     padding: 20px;
     text-align: center;
-    margin: 10px;
+    margin-left: 10%;
+    margin-right: 10%;
     background-color: rgb(37,41,46);
     color: aliceblue;
     border-radius: 20px;
@@ -22,7 +24,7 @@ h1 {
 .flexbox {
     text-align: center;
     background-color: rgb(200, 200, 200);
-    width: 90%;
+    width: 80%;
     margin: 10px;
     padding: 10px;
     border-radius: 25px;
@@ -48,4 +50,16 @@ ol.otazky {
 }
 a {
     color: inherit;
+}
+em{
+    font-weight: bolder;
+    font-style: normal;
+}
+p{
+    margin: 10px;
+    margin-left: 10%;
+    margin-right: 10%;
+    text-align: justify;
+    padding-bottom: 5px;
+    font-size: 18px;
 }
