--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,16 @@
 header, body {
     font-family: 'Avenir Next';
     font-size: 18px;
+    text-size-adjust: none;
 }
 
 h1 {
     font-weight: bold;
-    font-size: 20px;
-    padding: 20px;
+    font-size: 2em;
+    padding: 15px;
     text-align: center;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
     background-color: rgb(37,41,46);
     color: aliceblue;
     border-radius: 20px;
@@ -24,9 +25,9 @@ h1 {
 .flexbox {
     text-align: center;
     background-color: rgb(200, 200, 200);
-    width: 80%;
+    width: 90%;
     margin: 10px;
-    padding: 10px;
+    padding: 1vw;
     border-radius: 25px;
 }
 ol {
@@ -56,10 +57,11 @@ em{
     font-style: normal;
 }
 p{
-    margin: 10px;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
     text-align: justify;
     padding-bottom: 5px;
-    font-size: 18px;
+}
+li {
+    max-width: 30em;
 }
